Display a notification when shutting down the endpoint. Make a separate action to boot the squashfs image for testing.
Signed-off-by: golubovsky <golubovsky@gmail.com>

--- a/xtrafiles/ushutdn.desktop
+++ b/xtrafiles/ushutdn.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=Shutdown the CRD Endpoint
 Comment=Shutdown the CRD Endpoint
-Exec=/bin/sh -c "echo >/tmp/ushutdn.tmp"
+Exec=/bin/sh -c "sleep 2; zenity --notification --text=\"The `hostname` CRD Endpoint is shutting down\"; sleep 5; echo >/tmp/ushutdn.tmp"
 Icon=/usr/share/icons/LoginIcons/apps/24/system-shutdown.svg
 Type=Application
 
